--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "antd": "^4.8.0",
     "axios": "^0.21.0",
     "final-form": "^4.20.1",
+    "final-form-arrays": "^3.0.2",
     "immutability-helper": "^3.1.1",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-final-form": "^6.5.2",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
+    "react-table": "^7.6.1",
+    "react-toastify": "^6.1.0",
     "react-tooltip": "^4.2.10",
     "redux-logger": "^3.0.6",
     "styled-components": "^5.2.1",
