--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-tooltip": "^4.2.10",
     "redux-logger": "^3.0.6",
     "styled-components": "^5.2.1",
+    "svg-inline-loader": "^0.8.2",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
