--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
+    "react-sound": "^1.2.0",
     "react-table": "^7.6.1",
     "react-toastify": "^6.1.0",
     "react-tooltip": "^4.2.10",
