--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
     "@types/react-redux": "^7.1.11",
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.4",
+    "eslint": "^7.13.0",
     "gh-pages": "^3.1.0",
+    "prettier": "^2.1.2",
     "react-app-rewired": "^2.1.6"
   }
 }
