--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": ".",
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
+    "@react-pdf/renderer": "^1.6.12",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -22,6 +23,7 @@
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-file-viewer": "^1.2.1",
     "react-final-form": "^6.5.2",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
