--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.1",
     "react-file-viewer": "^1.2.1",
     "react-final-form": "^6.5.2",
+    "react-pdf": "^5.0.0",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
